# cpp_cmake_boilerplate

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: CMakeLists.txt  conanfile.txt
{{cookiecutter.project_name}}/cmake/: conan_install.cmake  conan_package.cmake  include_submodules.cmake  prefetch_conan.cmake
{{cookiecutter.project_name}}/test_{{cookiecutter.project_name}}/: CMakeLists.txt
{{cookiecutter.project_name}}/test_{{cookiecutter.project_name}}/src/: test_{{cookiecutter.project_name}}.cpp
{{cookiecutter.project_name}}/tests/: CMakeLists.txt
{{cookiecutter.project_name}}/tests/source/: test_cmake.cpp
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: CMakeLists.txt
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/inc/: {{cookiecutter.project_name}}.hpp
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/source/: hello.cpp
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/src/: hello.cpp  {{cookiecutter.project_name}}.cpp
